[build-system]
requires = [
    "scikit-build-core >= 0.4.3",
    "nanobind >= 1.3.2",
    "typing_extensions",
]
build-backend = "scikit_build_core.build"


[project]
name = "libdebug"
authors = [
    {name = "JinBlack"},
    {name = "Io-no"},
    {name = "MrIndeciso"},
    {name = "Frank01001"},
]
description = "A Python library for the debugging of binary executables."
requires-python = ">= 3.10"
license = {file = "LICENSE"}
version = "0.8.1"
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Debuggers",
    "Typing :: Typed",
]
keywords = ["libdebug", "debugger", "elf", "ptrace", "gdb", "debug", "ctf", "reverse-engineering", "reverse", "rev", "scriptable", "script"]
dependencies = [
    "psutil",
    "pyelftools",
    "prompt-toolkit",
]

[project.optional-dependencies]
dev = [
    "rich",
]

[project.urls]
homepage = "https://libdebug.org"
repository = "https://github.com/libdebug/libdebug/"
issues = "https://github.com/libdebug/libdebug/issues"


[tool.ruff]
include = ["pyproject.toml", "libdebug/**/*.py"]
exclude = ["test/"]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "EM", "FBT", "G", "TD", "TRY002", "TRY003", "RET505", "SLF001", "S603", "S606", "PYI021", "D212"]

[tool.ruff.lint.per-file-ignores]
"libdebug/builtin/pretty_print_syscall_handler.py" = ["T201"]
"libdebug/architectures/amd64/amd64_stack_unwinder.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"

[tool.scikit-build.sdist]
exclude = ["test", "docs", "media", "examples", ".github", "*/__pycache__"]
