[build-system]
requires = [
    "scikit-build-core >= 0.4.3",
    "nanobind >= 1.3.2",
    "typing_extensions",
]
build-backend = "scikit_build_core.build"


[project]
name = "libdebug"
authors = [
    {name = "JinBlack"},
    {name = "Io-no"},
    {name = "MrIndeciso"},
    {name = "Frank01001"},
]
description = "A Python library for the debugging of binary executables."
requires-python = ">= 3.10"
license = {file = "LICENSE"}
version = "0.9.0"
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Debuggers",
    "Typing :: Typed",
]
keywords = ["libdebug", "debugger", "elf", "ptrace", "gdb", "debug", "ctf", "reverse-engineering", "reverse", "rev", "scriptable", "script"]
dependencies = [
    "psutil",
    "pyelftools",
    "prompt-toolkit",
    "requests",
]

[project.optional-dependencies]
dev = [
    "rich",
]

[project.urls]
homepage = "https://libdebug.org"
repository = "https://github.com/libdebug/libdebug/"
issues = "https://github.com/libdebug/libdebug/issues"


[tool.ruff]
include = ["pyproject.toml", "libdebug/**/*.py"]
exclude = ["test/"]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "EM", "FBT", "G", "TD", "TRY002", "TRY003", "RET505", "SLF001", "S603", "S606", "PYI021", "D212"]

[tool.ruff.lint.per-file-ignores]
"libdebug/builtin/pretty_print_syscall_handler.py" = ["T201"]
"libdebug/architectures/amd64/amd64_stack_unwinder.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"

[tool.scikit-build.sdist]
exclude = ["test", "docs", "media", "examples", ".github", "*/__pycache__", "newsfragments"]

[tool.libdebug]
"codename" = "🏰 White Castle 🏰"

[tool.towncrier]
directory = "newsfragments"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->"
title_format = "## {version}"

[[tool.towncrier.type]]
name = "Features"
directory = "feature"

[[tool.towncrier.type]]
name = "Other Improvements"
directory = "improvement"

[[tool.towncrier.type]]
name = "Bug Fixes"
directory = "bugfix"

[[tool.towncrier.type]]
name = "Testing & CI"
directory = "test"

[[tool.towncrier.type]]
name = "Documentation"
directory = "doc"


# Build all 32-bit and 64-bit wheels on i386/amd64 hosts
# Build only 64-bit wheels on aarch64 hosts
[tool.cibuildwheel]
archs = ["auto64", "auto32"]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*armv7l*"
manylinux-x86_64-image = "manylinux_2_28"
manylinux-i686-image = "manylinux2014"
manylinux-aarch64-image = "manylinux_2_28"
before-all = "python cmake/prepare_for_wheel_distrib.py"
repair-wheel-command = "auditwheel repair --strip -w {dest_dir} {wheel}"